blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blog.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: blog-service
            port:
              number: 80
